框架已基本搭建完成

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,5 +17,6 @@ build_flags =
 	-D CONFIG_FREERTOS_USE_TRACE_FACILITY
 	-D CONFIG_DISABLE_HAL_LOCKS=1
 	-D WIRE_USE_MUTEX
-	-I src/Bluetooth
+	-I src/Hardware
+	-I src/Task
 board_build.partitions = partition.csv
