--- a/platformio.ini
+++ b/platformio.ini
@@ -15,8 +15,10 @@ framework = arduino
 build_flags = 
 	-D CONFIG_FREERTOS_USE_STATS_FORMATTING_FUNCTIONS
 	-D CONFIG_FREERTOS_USE_TRACE_FACILITY
-	-D CONFIG_DISABLE_HAL_LOCKS=1
+	-D CONFIG_DISABLE_HAL_LOCKS=0
+	# -D CAR_DEBUG
 	-D WIRE_USE_MUTEX
 	-I src/Hardware
 	-I src/Task
 board_build.partitions = partition.csv
+lib_deps = plerup/EspSoftwareSerial@^8.0.3
